# PySerialAudioVisualizer

./: .gitignore  README.md  data.txt  main.py  pyproject.toml  requirements.txt  start.bat
_/: launch.sh  log.py  main.py  main__.py  main___.py  main__p.py  main_p.py
_/tests/: audio.py  audio_e.py  list.py  main.py  npp.py  play_wav.py  record_wav.py  ser.py  serialvisualizer.py
arduino/LedVisualizer/: LedVisualizer.ino
arduino/LedVisualizerRGB/: LedVisualizerRGB.ino
arduino/LedVisualizerRainbow/: LedVisualizerRainbow.ino
examples/: baregraph.py
examples/audio/: main.py
examples/web/: index.html  index.js
src/: __main__.py  av_audio.py  av_serial.py  graph.py  main.py  tempCodeRunnerFile.py
src/api/: api.py  baregraph.py  server.py
tests/: test_serial_service.py
vaudio/: __init__.py  __main__.py  analyzer.py  av_audio.py  av_serial.py  baregraph.py  cli.py  graph.py  typing.py  vaudio.py
vaudio/analyzer/: __init__.py  analyzer.py  analyzer_fft.py  analyzer_rolling.py
vaudio/api/: __init__.py  __main__.py  server.py
viravis/: analyzer.py  av_audio.py  cli.py  graph.py  typing.py  vaudio.py
