[tool.poetry]
name = "viravis"
version = "0.1.0"
description = ""
authors = ["Vlad <89295404+Virashu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyAudio = "^0.2.13"
pyserial = "^3.5"
saaba = { git = "https://github.com/virashu/saaba" }
numpy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"start" = "viravis.cli:main"

[tool.pylint]
disable = "missing-module-docstring,missing-class-docstring,missing-function-docstring"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",
  "ANN102",
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D202",
  "D400",
  "D401",
  "D415",
  "ERA001",
  "INP001",
  "PLC",
  "PLR",
  "TRY003",
]
pydocstyle.convention = "google"
